# dash33

./: Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md  TODO.md  __init__.py  analysis_options.yaml  clippy.toml  config.py  requirements.txt  rustfmt.toml  setup.cfg
.github/workflows/: docs-update.yml  pages.yml
agents/: finance.py
ai/: analyzer.py  model_monitor.py  model_versioning.py  models.py
benchmarks/: performance_monitor.py
cli/: main.py
config/: development.py
core/: errors.py  layers.py  monitoring.py  optimization.py  security.py
crawlers/: phidata.py
docs/: INDEX.md  SYSTEM_MAP.md  index.html
integrations/web5/: data_manager.py
lib/: dash33.dart
scripts/: dev.py
src/: lib.rs
tests/: conftest.py  test_ai_analyzer.py  test_models.py  test_security.py  test_wallet_manager.py  test_web.py  test_web5_data_manager.py
wallet/: security.py  wallet_manager.py  web5_storage.py
web/: __init__.py  main.py  schemas.py
web/scripts/: web.py
web/static/: app.js  index.html  style.css
web/static/components/: Dashboard.js  WalletConnect.js
web5/: did_manager.py
