[package]
name = "dash33"
version = "0.1.0"
edition = "2021"
description = "Dashboard and analytics module for Anya"
authors = ["Botshelo Mokoka"]
license = "MIT"

[dependencies]
# Core Dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
bitcoin = "0.30"
ndarray = "0.15"

[dev-dependencies]
tokio-test = "0.4"
http = "0.2"

[lib]
name = "dash33"
path = "src/lib.rs"

[features]
default = []
advanced-analytics = []
